--- a/docs/AzureAI/001-人工智能的前世今生.md
+++ b/docs/AzureAI/001-人工智能的前世今生.md
@@ -12,14 +12,14 @@
 
 ---
 
-## 2早期的发展 (1956-1974)
+## 早期的发展 (1956-1974)
 
 达特茅斯会议后，AI 进入了**“黄金时代”**，研究者们开发出了：
 **几何定理证明机 (Geometry Theorem Prover)** —— 能自动证明几何定理  
 **ELIZA** —— 能用英语与人类对话的早期聊天机器人  
 **自动推理系统** —— 能解答逻辑问题的 AI 系统  
 
-🔹 **AI 研究的兴起** 也吸引了大量资金：
+**AI 研究的兴起** 也吸引了大量资金：
 - **DARPA（美国国防高级研究计划局）** 和企业投资了 **数千万美元**，推动**专家系统 (Expert Systems) 和逻辑推理**的发展。
 
 但 **70 年代初**，现实挑战开始显现：
@@ -28,7 +28,7 @@
 - **DARPA 语音识别项目失败，资助被削减**
 - **1973 年《莱特希尔报告》批评 AI，英国政府暂停拨款**
 
-❄️ **第一次“AI 冬天”到来**，资金撤离，研究陷入停滞。
+**第一次“AI 冬天”到来**，资金撤离，研究陷入停滞。
 
 ---
 
