--- a/docs/AzureAI/001-人工智能的前世今生.md
+++ b/docs/AzureAI/001-人工智能的前世今生.md
@@ -81,4 +81,6 @@ AI 的发展史完美印证了这一点：
 - AI 发展 **经历了高潮与低谷**，但每次低谷后都迎来了新的突破。
 - AI 正在 **改变世界**，但 AGI 的未来仍然充满未知。
 
+📄 **本文 GitHub 地址**：[人工智能的前世今生](https://github.com/bingbing-gui/AspNetCore-Skill/blob/master/docs/AzureAI/001-%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%E7%9A%84%E5%89%8D%E4%B8%96%E4%BB%8A%E7%94%9F.md)
+
 📢 **欢迎 Star ⭐ 本仓库，获取更多 AI 资源！**
