AI的核心能力

--- a/docs/AzureAI/002-AI的核心能力.md
+++ b/docs/AzureAI/002-AI的核心能力.md
@@ -1,4 +1,3 @@
-# AI 系列第二篇：AI 的核心能力
 
 在上一篇文章中，我们介绍了 **AI 的起源及发展**。本节将探讨 **AI 的应用领域** 以及 **人工智能究竟能做什么**。
 
@@ -74,9 +73,9 @@ AI **创造原创内容**，包括文本、图像、代码或音乐。
 
 ---
 
-## 结语
+## 总结
 
-以上展示了 AI 的 **核心能力** 及其在不同行业中的 **实际应用**。如果你对 AI 感兴趣，不妨选择 **适合你的方向** 深入学习！🎯
+以上展示了 AI 的 **核心能力** 及其在不同行业中的 **实际应用**。如果你对 AI 感兴趣，不妨选择 **适合你的方向** 深入学习！
 
 ---
 
