--- a/docs/AzureAI/003-机器学习的概念.md
+++ b/docs/AzureAI/003-机器学习的概念.md
@@ -1,5 +1,3 @@
-# AI系列第三篇：机器学习基础
-
 ## 什么是机器学习 (Machine Learning)？
 
 机器学习起源于 20 世纪 50 年代，是 **人工智能的重要基础**。当前，许多 AI 应用都依赖于机器学习技术。
@@ -18,23 +16,23 @@
 
 ---
 
-## 2️⃣ 机器学习工作原理
+## 机器学习工作原理
 
 机器学习的核心在于**捕捉数据之间的关系**。以下是一个典型的工作流程：
 
-1️⃣ **数据收集**  
+**数据收集**  
    - 例如：植物学家和科学家收集了 **野花样本数据**。  
    
-2️⃣ **数据标注**  
+**数据标注**  
    - 给每个样本 **贴上物种标签**，建立训练数据集。  
 
-3️⃣ **训练模型**  
+**训练模型**  
    - 使用 **机器学习算法** 处理这些数据，找到 **样本特征与物种** 之间的关系。  
 
-4️⃣ **构建预测模型**  
+**构建预测模型**  
    - 训练完成后，生成一个 **机器学习模型**，可以识别新的数据。  
 
-5️⃣ **模型推理**  
+**模型推理**  
    - 当志愿者拍摄一张新野花的照片时，模型会预测其**所属物种**，提供准确的分类结果。  
 
 如今，**人工智能的方法已经发展到可以完成更复杂的任务**，机器学习模型已成为许多 **AI 功能的基础**。
