计算机视觉

--- a/docs/AzureAI/004-计算机视觉.md
+++ b/docs/AzureAI/004-计算机视觉.md
@@ -1,10 +1,6 @@
-# 计算机视觉  
-
----
-
 ## 什么是计算机视觉？  
 
-计算机视觉（Computer Vision）是 **人工智能 (AI)** 的一个重要分支，专注于 **视觉处理**，即让计算机能够**“看见”**并理解图像、视频等视觉内容。  
+计算机视觉（Computer Vision）是 **人工智能 (AI)** 的一个重要分支，专注于 **视觉处理**，即让计算机能够**看见**并理解图像、视频等视觉内容。  
 
 一个典型的计算机视觉应用案例是 **微软 Seeing AI** 应用程序。这款应用专为 **盲人和低视力群体** 设计，利用 AI **描述周围的环境、识别文字和物体**，让视觉世界变得可访问。  
 
@@ -22,11 +18,11 @@
 
 ### **语义分割 (Semantic Segmentation)**  
 **任务**：为图像中的每个像素分配类别，精确划分 **前景** 和 **背景**。  
-**应用场景**：自动驾驶 🚘（识别道路标志、车道线）  
+**应用场景**：自动驾驶（识别道路标志、车道线）  
 
 ### **图片分析 (Image Analysis)**  
 **任务**：分析图像内容，提取 **颜色、纹理、物体、场景** 等信息。  
-**应用场景**：智能相册 📷（自动分类图片）  
+**应用场景**：智能相册（自动分类图片）  
 
 ### **人脸检测、分析与识别 (Face Detection, Analysis & Recognition)**  
 **任务**：检测人脸、分析情绪、识别身份。  
@@ -69,7 +65,7 @@
 
 ## 总结  
 
-计算机视觉让 **机器能够像人类一样“看见”世界**，并广泛应用于 **医疗、安防、自动驾驶、零售、金融等领域**。  
+计算机视觉让 **机器能够像人类一样看见世界**，并广泛应用于 **医疗、安防、自动驾驶、零售、金融等领域**。  
 
 你对计算机视觉感兴趣吗？可以从 **图像分类、物体检测、OCR** 等方向入手，探索 AI 的无限可能！ 
 
