修改文件格式

--- a/docs/AzureAI/006-自然语言处理(NLP).md
+++ b/docs/AzureAI/006-自然语言处理(NLP).md
@@ -1,10 +1,10 @@
-# 自然语言处理 (NLP)  
 
-## 什么是自然语言处理 (NLP)？  
+# 自然语言处理 (NLP)  
 
 **自然语言处理 (Natural Language Processing, NLP)** 是 **人工智能 (AI)** 的一个重要分支，专注于 **创建能够理解书面和口头语言的软件**。  
 
-### **NLP 主要应用**：
+## **NLP 主要应用**
+
 **文本分析**：解析 **文档、电子邮件、社交媒体内容** 等来源中的文本  
 **语音处理**：识别口语并 **合成语音响应**  
 **机器翻译**：在 **不同语言之间自动翻译** 口语或书面文本  
@@ -19,17 +19,20 @@
 **Azure AI 相关 NLP 服务**：
 
 **Azure AI Language**：
+
 - 分析和理解文本内容
 - 训练 **对话式 AI**，让应用理解用户的语音或文本命令  
 - 提供 **文本情感分析、命名实体识别、关键词提取**  
 
 **Azure AI Speech**：
+
 - 语音识别（Speech-to-Text）
 - 语音合成（Text-to-Speech）
 - 实时翻译 **（Speech Translation）**
 - 对话转录 **（Conversation Transcription）**  
 
 **Azure AI Translator**：
+
 - 使用 **神经机器翻译 (NMT)** 模型进行高质量文本翻译  
 - **支持 100+ 种语言**，并保持语境语义一致性  
 
@@ -38,10 +41,12 @@
 ## 如何使用 Azure NLP 服务？  
 
 你可以在 **Azure Language Studio** 体验 **Azure AI Language** 的功能，或者在 **Azure Speech Studio** 体验 **Azure AI Speech** 的能力。  
+
 - **在线测试** NLP 能力  
 - **在不同编程语言中集成**（支持 Python、C#、JavaScript 等）  
 
  **相关资源**：
+
 - [Azure AI Language 官方文档](https://learn.microsoft.com/en-us/azure/ai-services/language-service/)  
 - [Azure AI Speech 官方文档](https://learn.microsoft.com/en-us/azure/ai-services/speech-service/)  
 - [Azure AI Translator 官方文档](https://learn.microsoft.com/en-us/azure/ai-services/translator/)  
