--- a/docs/AzureAI/007-文档处理和知识挖掘.md
+++ b/docs/AzureAI/007-文档处理和知识挖掘.md
@@ -1,6 +1,4 @@
-# 文档处理和知识挖掘  
-
-## 智能文档  
+# 智能文档  
 
 **智能文档处理** 是 **人工智能 (AI)** 领域的一个重要分支，专注于 **管理、处理和利用大量来自表单和文档的多种数据**。  
 它使软件具备 **智能化文档处理能力**，可用于 **合同管理、医疗文档、财务表单** 等场景，提高 **数据处理效率和自动化水平**。  
@@ -14,6 +12,7 @@
 ### **主要功能**
 
 **预构建模型**：  
+
 - 快速解析 **发票、收据、健康保险卡、税务表单** 等标准化文档  
 - 自动提取 **关键信息**，减少人工录入成本  
 
@@ -37,12 +36,14 @@
 
 **Azure AI Search** 是 **Microsoft 的知识挖掘解决方案**，专为 **企业级私有搜索** 设计，支持 **全文索引**，并集成了 **AI 处理能力**。  
 
-### **主要特点**
 **企业级搜索**：  
+
 - 支持 **内部数据检索** 和 **外部内容展示**  
 - 适用于 **企业知识库、法律文档、研究论文、电子商务产品搜索**  
 
 **AI 驱动的数据提取**：  
+**AI 驱动的数据提取**：
+
 - 集成 **Azure AI 服务**，包括：
   - **图像处理**
   - **文档智能**
@@ -50,13 +51,15 @@
 - 让 **无法搜索的文档** 变得 **可索引、可提取**，从大量数据中发现 **有价值的信息**  
 
 **相关链接**：
+
 - [Azure AI Search 官方文档](https://learn.microsoft.com/en-us/azure/search/)  
 
 ---
 
-## 总结  
-
 **文档智能** 和 **知识挖掘** 是 **AI 在企业数据管理中的关键应用**。  
+
+- **文档智能** 可以自动化 **文档处理**，减少人工操作，提高效率  
+- **知识挖掘** 让 **非结构化数据可搜索**，帮助企业更快获取有价值信息  
 - **文档智能** 可以自动化 **文档处理**，减少人工操作，提高效率  
 - **知识挖掘** 让 **非结构化数据可搜索**，帮助企业更快获取有价值信息  
 
