--- a/docs/AzureAI/008-生成式AI.md
+++ b/docs/AzureAI/008-生成式AI.md
@@ -1,16 +1,17 @@
-# 生成式 AI  
 
-## 什么是生成式 AI？  
+# 什么是生成式 AI？  
 
 **生成式 AI (Generative AI)** 是 **人工智能 (AI)** 领域的一个分支，指的是 **能够创造原创内容** 的 AI 技术。  
 
 生成式 AI 允许用户通过 **自然语言输入** 进行交互，并以 **多种格式** 生成响应，包括：  
+
 - **文本**（文章生成、对话 AI）  
 - **图像**（AI 绘画、图片合成）  
 - **代码**（自动代码补全、代码生成）  
 - **音频**（语音合成、音乐生成）  
 
 常见的 **生成式 AI 应用**：
+
 - **ChatGPT**（智能聊天助手）  
 - **DALL·E**（AI 生成图像）  
 - **GitHub Copilot**（AI 代码助手）  
@@ -22,24 +23,30 @@
 在 **Microsoft Azure** 中，你可以使用 **Azure OpenAI 服务** 来 **构建生成式 AI 解决方案**。  
 
 ### **Azure OpenAI 服务**
+
 **Azure OpenAI** 是 **Microsoft 提供的云端解决方案**，用于 **部署、定制和托管生成式 AI 模型**。  
 它结合了 **OpenAI 最先进的模型和 API**，并依托 **Azure 云平台的安全性和可扩展性**，满足企业级 AI 需求。  
 
 **核心功能**：
+
 - 部署 OpenAI 先进的 **GPT 系列模型**（GPT-4, GPT-3.5 等）  
 - 自定义和优化 AI 模型，以适应不同的业务需求  
 - 提供 **安全、合规的企业级 AI 解决方案**  
 
 **Azure OpenAI 官方文档**：  
+
 - [Azure OpenAI 服务](https://learn.microsoft.com/en-us/azure/cognitive-services/openai/)  
 
 ### **Azure AI Foundry**
- **Azure AI Foundry** 是 **Microsoft 设计的企业级 AI 解决方案平台**，用于：
+
+**Azure AI Foundry** 是 **Microsoft 设计的企业级 AI 解决方案平台**，用于：
+
 - **管理、开发、定制** 生成式 AI 模型  
 - **测试 AI 生成能力**，优化 AI 模型的业务适配性  
 - 结合 **Azure 其他 AI 解决方案**，构建端到端 AI 生态  
 
 **Azure AI Foundry 官方文档**：  
+
 - [Azure AI Foundry](https://techcommunity.microsoft.com/t5/ai-azure-blog/introducing-azure-ai-foundry-enterprise-grade-ai-from-microsoft/ba-p/3857230)  
 
 ---
@@ -51,6 +58,7 @@
 **想要开始体验生成式 AI？试试 Azure OpenAI 服务，在 Azure AI Foundry 平台上测试和管理你的 AI 模型！** 🚀  
 
 🔗 **更多 AI 资源**：
+
 - [Azure AI 官方文档](https://learn.microsoft.com/en-us/azure/cognitive-services/)  
 - [Azure AI OpenAI API 入门](https://learn.microsoft.com/en-us/azure/cognitive-services/openai/quickstart)  
 
