--- a/src/01-Basics/Identity/Identity-architecture/111.md
+++ b/src/01-Basics/Identity/Identity-architecture/111.md
@@ -1,20 +1,5 @@
-```mermaId
-graph TB
-    A[Microsoft 365 Copilot 中的<br>Copilot Studio 代理构建器]
-    B[Microsoft Copilot Studio]
-    C[Microsoft 365 Agents SDK]
-    D[AutoGen]
-    E[Semantic Kernel]
-    F[OpenAI Assistants API]
-    G[Azure AI Agent 服务]
-
-    A --> B
-    B --> C
-    C --> D
-    D --> E
-    E --> F
-    F --> G
-
-    classDef boxStyle fill:#e1ecf4,stroke:#6c8ebf,stroke-width:1px;
-    class A,B,C,D,E,F,G boxStyle;
+```mermaid
+graph TD
+    A[1. 创建 Azure AI Search 索引] --> B[2. 将索引连接信息添加到 OpenAI 请求中]
+    B --> C[3. 使用模型生成结合索引数据的上下文回复]
 ```
