提示词诱导

--- a/docs/AzureAIFoundry/提示工程学.md
+++ b/docs/AzureAIFoundry/提示工程学.md
@@ -19,70 +19,72 @@
 
 当你直接与 LLM 模型交互时，还可以使用其他参数来影响模型行为。例如：
 
-temperature 是什么？
-定义：temperature 控制生成文本的“随机性”或“创造性”。它决定了模型从多个可能的输出中选择的倾向。
+### temperature — 控制“随机性/创造性”
 
-合法范围：0.0 ~ 2.0
-实际常用范围：0.2 ~ 1.0
-    一般大于 1.2 就过于随机，基本不推荐使用
-    小于 0.2 会极端保守，只输出最确定内容
+- **定义：** 控制生成文本的随机程度，影响词汇分布的“平滑度”。
+- **取值范围：** `0.0` 到 `2.0`
+- **常用范围建议：** `0.2 ~ 1.0`
+- **说明补充：**
+  - 越低越确定（像查字典一样），越高越“发散”（更具创造力但不稳定）。
+  - 通常任务：`0.7` 是较常用的折中值。
 
+---
 
-top-k 是什么？
+### top-k — 词汇候选的硬限制
 
-定义：top-k 控制模型在每一步生成词语时，只从概率最高的 前 K 个词 中随机选择。它是对输出词汇候选池的一个硬限制，缩小选择范围，从而控制输出的多样性。
+- **定义：** 每步生成词时，从概率最高的前 `k` 个词中采样，其他的词一律不考虑。
+- **合法范围：** 通常为 `1` 到 `1000+`（视模型和 API 限制）
+- **常用范围：** `20` 到 `100`
+- **说明补充：**
+  - `top-k = 1` 表示“贪婪解码”（greedy decoding），始终选最可能的那个词。
+  - 可与 `temperature` 搭配使用以增强或限制创造力。
 
-取值范围
-    合法范围：1 ~ 1000+（具体取决于模型支持）
-    实际常用范围：20 ~ 100
+---
 
+### top-p（nucleus sampling）— 概率累计筛选
 
-top-p（又叫 nucleus sampling）— 控制 概率累积筛选
+- **定义：** 从累计概率加起来达到 `p` 的词集合中随机采样。
+- **取值范围：** `0.0 ~ 1.0`，常用值为 `0.8 ~ 0.95`
+- **说明补充：**
+  - 比 `top-k` 更“自适应”：不限制具体词数，而是根据概率分布动态决定多少候选词。
+  - 一般推荐优先使用 `top-p` 而不是 `top-k`，因为更自然。
 
-定义：从累积概率前 p 的词中采样。
-取值范围：0.0 ~ 1.0（常见值为 0.8 ~ 0.95）
-效果：top-p = 0.9 表示从那些 加起来总概率为 90% 的词 中随机采样。
-自动根据概率分布选择词数量（更灵活于 top-k）。
-推荐：比 top-k 更智能，适合大多数任务。
-一般搭配 temperature 调整输出创意程度。
+---
 
-frequency penalty（频率惩罚）— 惩罚 重复使用频率高的词
+### frequency penalty — 惩罚“词频高的词”
 
-定义：减少模型重复使用之前生成过的词的概率。
-取值范围：0.0 ~ 2.0（默认为 0）
-效果：增加该参数会鼓励模型使用 不同的词汇，减少重复。
-例如：避免回答中反复说“好的”、“当然”。
-适用：改写、文章创作、避免啰嗦。
+- **定义：** 减少模型重复使用之前**频繁生成的词**的倾向。
+- **取值范围：** `0.0 ~ 2.0`，默认 `0`
+- **效果：** 增加后输出更加丰富，减少词汇重复。
 
-presence penalty（存在惩罚）— 惩罚 是否曾经用过
-定义：对之前生成过的词整体增加惩罚权重。
-取值范围：0.0 ~ 2.0
-区别于 frequency penalty：
-    frequency 惩罚多次使用某词。
-    presence 一旦用过某词就降低其再出现的概率（无论用几次）。
-适用：鼓励模型探索 新的话题或思路，提升多样性。
+---
 
+### presence penalty — 惩罚“出现过的词”
+
+- **定义：** 对所有曾经使用过的词一律增加惩罚，即便只出现过一次。
+- **取值范围：** `0.0 ~ 2.0`
+- **与 frequency penalty 区别：**
+  - `frequency penalty` 是对词用得越多惩罚越大；
+  - `presence penalty` 是“用过一次就开始惩罚”，鼓励引入新词。
 
 ## 提示词工程：一项新兴职业
 
-由于提示词能极大地影响输出质量，因此提示词工程成为一项重要技能。随着越来越多的组织采用 LLM AI 模型来自动化任务、提升效率，对提示词工程师的需求也在迅速增长。
+由于提示词能极大地影响输出质量，因此提示词工程成为一项重要技能。随着越来越多的组织采用LLM AI 模型来自动化任务、提升效率，对提示词工程师的需求也在迅速增长。
 
 优秀的提示词工程师可以帮助企业最大限度地发挥其大语言模型的能力，确保输出满足实际需求。
 
 ### 借助 Semantic Kernel 成为提示词工程高手
 
-Semantic Kernel 是提示词工程的重要工具。它允许你在多个模型之间，通过统一的接口快速对比不同提示词和参数的效果，从而实现快速迭代和调优。
-掌握提示词工程后，你还可以使用 Semantic Kernel 将这些技能应用到真实项目中：
+Semantic Kernel 是提升提示词工程能力的重要工具。它通过统一的接口，让你能够在多个模型之间快速对比不同提示词和参数的效果，实现高效的迭代和调优。
 
-结合提示词 + 本地函数 + 外部系统连接器，打造强大的 AI 应用。
+掌握提示词工程之后，你可以使用 Semantic Kernel 将这些技能应用到真实项目中——结合提示词、本地函数与外部系统连接器，构建强大的 AI 应用。
 
-Semantic Kernel 还与 Visual Studio Code 深度集成，使你能够将提示词工程无缝嵌入现有的开发流程：
+Semantic Kernel 还与 Visual Studio Code 深度集成，让你能够将提示词工程无缝融入现有的开发流程：
 
-在你熟悉的代码编辑器中直接创建提示词
+- 在熟悉的代码编辑器中直接创建和调试提示词
+- 使用现有测试框架为提示词编写单元测试
+- 将提示词部署到生产环境，并集成进 CI/CD 流水线
 
-使用已有的测试框架为提示词编写测试
-
-将提示词部署到生产环境，配合现有的 CI/CD 流水线
 
 ### 提示词工程实战技巧
 
