--- a/docs/AI基础/第7章-文档处理和知识挖掘.md
+++ b/docs/AI基础/第7章-文档处理和知识挖掘.md
@@ -1,4 +1,5 @@
-# 智能文档  
+# 第7章-文档处理和知识挖掘  
+
 
 **智能文档处理** 是 **人工智能 (AI)** 领域的一个重要分支，专注于 **管理、处理和利用大量来自表单和文档的多种数据**。  
 它使软件具备 **智能化文档处理能力**，可用于 **合同管理、医疗文档、财务表单** 等场景，提高 **数据处理效率和自动化水平**。  
