--- a/docs/自我介绍.md
+++ b/docs/自我介绍.md
@@ -3,6 +3,10 @@
 🧑‍💻 关于作者 桂兵兵（Bill Gui）的技术档案页，涵盖：个人简介、.NET / AI 技术栈、个人兴趣与认证成就。
 
 ---
+<p align="center">
+    <img src="https://cdn.jsdelivr.net/gh/bingbing-gui/assets/mvp-logo.png" alt="Microsoft MVP Logo" width="120"/>
+</p>
+---
 
 ## 👤 关于我 | About Me
 
@@ -41,13 +45,17 @@
 
 ## 🏅 荣誉称号 | Recognition
 
-> Microsoft Most Valuable Professional
+> Microsoft MVP
+
+![Microsoft MVP 证书](人工智能基础/Materials//MVP-Award-Certificate.jpg)
 
 - 授予：桂兵兵（Bill Gui）  
 - 年度：2024–2026  
-- 技术领域：Developer Technologies (.NET)  
+- 技术领域：Developer Technologies (.NET) 
 
 > Microsoft Certified: Azure AI Engineer Associate
+
+![Azure AI Engineer 证书](人工智能基础/Materials/AI-Engineer-Certificate.jpg)
 
 - 持证人：桂兵兵（Bill Gui）  
 - 认证编号：AI-102  
