修改自我介绍

--- a/docs/自我介绍.md
+++ b/docs/自我介绍.md
@@ -47,7 +47,7 @@
 
 > Microsoft MVP
 
-![Microsoft MVP 证书](人工智能基础/Materials//MVP-Award-Certificate.jpg)
+<img src="人工智能基础/Materials//MVP-Award-Certificate.jpg" alt="Microsoft MVP 证书" style="width: 60%; border-radius: 8px;" />
 
 - 授予：桂兵兵（Bill Gui）  
 - 年度：2024–2026  
@@ -55,7 +55,7 @@
 
 > Microsoft Certified: Azure AI Engineer Associate
 
-![Azure AI Engineer 证书](人工智能基础/Materials/AI-Engineer-Certificate.jpg)
+<img src="人工智能基础/Materials/c9bba1dfeba3f8750e4ca484ec5aa4c.jpg" alt="Microsoft MVP 证书" style="width: 60%; border-radius: 8px;" />
 
 - 持证人：桂兵兵（Bill Gui）  
 - 认证编号：AI-102  
