添加领英链接

--- a/docs/自我介绍.md
+++ b/docs/自我介绍.md
@@ -23,9 +23,10 @@
 
 ## 📬 联系方式 | Contact
 
-- 💼 GitHub: [@your-github](https://github.com/your-github)  
-- 🌐 博客主页: [https://github.com/bingbing-gui](https://github.com/bingbing-gui)  
+- 💼 GitHub: [@your-github](https://github.com/bingbing-gui)  
+- 🌐 博客主页: [https://github.com/bingbing-gui](https://bingbing-gui.gitbook.io/blog)  
 - 📮 邮箱: [bingbing.gui@outlook.com](mailto:bingbing.gui@outlook.com)  
+- 💼 领英: [linkedin.com/in/bingbing-gui](https://www.linkedin.com/in/%E5%85%B5%E5%85%B5-%E6%A1%82-399685235/)  
 
 ---
 
