添加作者头像

--- a/docs/人工智能基础/第1章-人工智能的前世今生.md
+++ b/docs/人工智能基础/第1章-人工智能的前世今生.md
@@ -91,4 +91,6 @@ AI 的发展史完美印证了这一点：
 
 📄 **本文 GitHub 地址**：[人工智能的前世今生](https://github.com/bingbing-gui/AspNetCore-Skill/blob/master/docs/AzureAI/001-%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%E7%9A%84%E5%89%8D%E4%B8%96%E4%BB%8A%E7%94%9F.md)
 
-📢 **欢迎 Star ⭐ 本仓库，获取更多 AI 资源！**
+---
+
+© 2025 Bill Gui. 本文采用 MIT License 许可协议，允许自由转载、修改，但请注明来源。
