--- a/docs/自我介绍.md
+++ b/docs/自我介绍.md
@@ -2,6 +2,8 @@
 
 🧑‍💻 关于作者 桂兵兵（Bill Gui）的技术档案页，涵盖：个人简介、.NET / AI 技术栈、个人兴趣与认证成就。
 
+<img src="人工智能基础/Materials/avatar.png" alt="作者" style="width: 60%; border-radius: 8px;" />
+
 
 ## 👤 关于我 | About Me
 
@@ -10,7 +12,7 @@
 - 📍 **所在城市**：日本·东京  
 - 🏢 **工作方向**：企业应用架构、AI 系统设计、前后端协作、Azure 云计算  
 
-## 📚 擅长领域
+## 📚 擅长领域 | Expertise
 
 - ASP.NET Core / ASP.NET Core MVC / WinForm / WPF / Dapper / EF Core  
 - Postgres / MySql / SqlServer  
