--- a/docs/自我介绍.md
+++ b/docs/自我介绍.md
@@ -2,7 +2,7 @@
 
 🧑‍💻 关于作者 桂兵兵（Bill Gui）的技术档案页，涵盖：个人简介、.NET / AI 技术栈、个人兴趣与认证成就。
 
-<img src="人工智能基础/Materials/avatar.png" alt="作者" style="width: 60%; border-radius: 8px;" />
+<img src="人工智能基础/Materials/avatar.jpg" alt="作者" style="width: 60%; border-radius: 8px;" />
 
 ## 👤 关于我 | About Me
 
