--- a/docs/自我介绍.md
+++ b/docs/自我介绍.md
@@ -1,8 +1,10 @@
 # 👋 欢迎来到我的技术博客
 
-🧑‍💻 关于作者 桂兵兵（Bill Gui）的技术档案页，涵盖：个人简介、.NET / AI 技术栈、个人兴趣与认证成就。
+> 👤 关于作者 桂兵兵（Bill Gui） 的技术档案页，涵盖：个人简介、.NET / AI 技术栈、个人兴趣与认证成就。
 
-<img src="人工智能基础/Materials/avatar.jpg" alt="作者" style="width: 60%; border-radius: 8px;" />
+<p align="center">
+  <img src="人工智能基础/Materials/avatar.jpg" width="200" alt="Bill Gui" style="border-radius: 10px;">
+</p>
 
 ## 👤 关于我 | About Me
 
@@ -44,7 +46,7 @@
 
 > Microsoft MVP
 
-<img src="人工智能基础/Materials//MVP-Award-Certificate.jpg" alt="Microsoft MVP 证书" style="width: 60%; border-radius: 8px;" />
+<img src="人工智能基础/Materials/MVP-Award-Certificate.jpg" alt="Microsoft MVP 证书" style="width: 60%; border-radius: 8px;" />
 
 - 授予：桂兵兵（Bill Gui）  
 - 年度：2024–2026  
