自我介绍修改

--- a/docs/自我介绍.md
+++ b/docs/自我介绍.md
@@ -1,16 +1,10 @@
 # 👋 欢迎来到我的技术博客
 
-<table>
-  <tr>
-    <td width="140">
-      <img src="人工智能基础/Materials/avatar.jpg" width="120" style="border-radius: 8px;" />
-    </td>
-    <td>
-      👤 关于作者 **桂兵兵（Bill Gui）** 的技术档案页，涵盖：个人简介、.NET / AI 技术栈、个人兴趣与认证成就。
-    </td>
-  </tr>
-</table>
+> 👤 关于作者 桂兵兵（Bill Gui） 的技术档案页，涵盖：个人简介、.NET / AI 技术栈、个人兴趣与认证成就。
 
+<p align="center">
+  <img src="人工智能基础/Materials/avatar.jpg" width="200" alt="Bill Gui" style="border-radius: 10px;">
+</p>
 
 ## 👤 关于我 | About Me
 
