自我介绍图片的展示效果

--- a/docs/自我介绍.md
+++ b/docs/自我介绍.md
@@ -1,8 +1,8 @@
 # 👋 欢迎来到我的技术博客
 
 > 👤 关于作者 桂兵兵（Bill Gui） 的技术档案页，涵盖：个人简介、.NET / AI 技术栈、个人兴趣与认证成就。
-
-<img src="人工智能基础/Materials/avatar.jpg" style="width: 60%; border-radius: 8px;" />
+>
+> <img src="人工智能基础/Materials/avatar.jpg" style="width: 60%; border-radius: 8px;" />
 
 ## 👤 关于我 | About Me
 
@@ -43,16 +43,16 @@
 ## 🏅 荣誉称号 | Recognition
 
 > Microsoft MVP
-
-<img src="人工智能基础/Materials/MVP-Award-Certificate.jpg" alt="Microsoft MVP 证书" style="width: 60%; border-radius: 8px;" />
+>
+> <img src="人工智能基础/Materials/MVP-Award-Certificate.jpg" alt="Microsoft MVP 证书" style="width: 60%; border-radius: 8px;" />
 
 - 授予：桂兵兵（Bill Gui）  
 - 年度：2024–2026  
 - 技术领域：Developer Technologies (.NET) 
 
 > Microsoft Certified: Azure AI Engineer Associate
-
-<img src="人工智能基础/Materials/c9bba1dfeba3f8750e4ca484ec5aa4c.jpg" alt="Microsoft MVP 证书" style="width: 60%; border-radius: 8px;" />
+>
+> <img src="人工智能基础/Materials/c9bba1dfeba3f8750e4ca484ec5aa4c.jpg" alt="Microsoft MVP 证书" style="width: 60%; border-radius: 8px;" />
 
 - 持证人：桂兵兵（Bill Gui）  
 - 认证编号：AI-102  
