添加微信联系方式

--- a/docs/自我介绍.md
+++ b/docs/自我介绍.md
@@ -24,6 +24,7 @@
 
 ## 📬 联系方式 | Contact
 
+- 💬 微信: guibb450190369
 - 💼 GitHub: [@your-github](https://github.com/bingbing-gui)  
 - 🌐 博客主页: [https://github.com/bingbing-gui](https://bingbing-gui.gitbook.io/blog)  
 - 📮 邮箱: [bingbing.gui@outlook.com](mailto:bingbing.gui@outlook.com)  
